# cmake_test_demo

./: CMakeLists.txt
include/: version.h  version.h.in
src/: main.cpp
src/ext_mod/: CMakeLists.txt
src/ext_mod/cmake/: Ext_modConfig.cmake.in
src/ext_mod/include/ext_mod/: header_ext.hpp
src/ext_mod/src/: source_ext.cpp
src/sub_mod1/: CMakeLists.txt
src/sub_mod1/include/sub_mod1/: import1.h
src/sub_mod1/src/: header1.h  source1.cpp
